--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
   <properties>
     <!-- Convenience property to set the GWT version -->
     <gwtVersion>2.5.0</gwtVersion>
+    
+    <gwt-sl.version>1.3-RC1</gwt-sl.version>
+    
+    <spring.core.version>3.1.0.RELEASE</spring.core.version>
+    <cglib.version>2.2</cglib.version>
+    <aspectj.version>1.6.10</aspectj.version>
+        
     <!-- GWT needs at least java 1.5 -->
     <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -51,6 +58,87 @@
       <version>1.0.0.GA</version>
       <classifier>sources</classifier>
       <scope>test</scope>
+    </dependency>
+    
+    <!--GWT SL-->
+    <dependency> 
+       <groupId>net.sf.gwt-widget</groupId> 
+      <artifactId>gwt-sl</artifactId> 
+      <version>${gwt-sl.version}</version> 
+    </dependency>
+	
+    <!-- Spring Core -->
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-core</artifactId>
+    	<version>${spring.core.version}</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-web</artifactId>
+    	<version>${spring.core.version}</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-tx</artifactId>
+    	<version>${spring.core.version}</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-webmvc</artifactId>
+    	<version>${spring.core.version}</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.core.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-oxm</artifactId>
+    	<version>${spring.core.version}</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-aspects</artifactId>
+    	<version>${spring.core.version}</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
+    
+    <!-- A seamless aspect-oriented extension to the Java programming language -->
+    <dependency>
+    	<groupId>org.aspectj</groupId>
+    	<artifactId>aspectjrt</artifactId>
+    	<version>${aspectj.version}</version>
+    </dependency>
+	
+    <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>${aspectj.version}</version>
+    </dependency>
+	
+    <!-- Cglib is a powerful, high performance and quality Code Generation Library, 
+	It is used to extend JAVA classes and implements interfaces at runtime.  -->
+    <dependency>
+        <groupId>cglib</groupId>
+        <artifactId>cglib-nodep</artifactId>
+        <version>${cglib.version}</version>
+        <type>jar</type>
+        <scope>compile</scope>
     </dependency>
   </dependencies>
 
